--- a/assets/package.json
+++ b/assets/package.json
@@ -6,13 +6,21 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
+    "jquery": "^3.3.0",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "babel-brunch": "6.1.1",
+    "babel-brunch": "^6.1.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "brunch": "2.10.9",
     "clean-css-brunch": "2.10.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "uglify-js-brunch": "2.10.0"
   }
 }
