--- a/assets/package.json
+++ b/assets/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "jquery": "^3.3.0",
+    "moment": "^2.22.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-vis": "^1.9.2"
   },
   "devDependencies": {
     "babel-brunch": "^6.1.1",
@@ -19,8 +21,6 @@
     "babel-preset-react": "^6.24.1",
     "brunch": "2.10.9",
     "clean-css-brunch": "2.10.0",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
     "uglify-js-brunch": "2.10.0"
   }
 }
