--- a/assets/package.json
+++ b/assets/package.json
@@ -13,7 +13,12 @@
     "phoenix_html": "file:../deps/phoenix_html",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-vis": "^1.9.2"
+    "react-redux": "^5.0.7",
+    "react-vis": "^1.9.2",
+    "redux": "^4.0.0",
+    "redux-actions": "^2.3.0",
+    "redux-observable": "^0.18.0",
+    "rxjs": "^5.5.10"
   },
   "devDependencies": {
     "babel-brunch": "^6.1.1",
