--- a/assets/package.json
+++ b/assets/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "jquery": "^3.3.0",
+    "js-cookie": "^2.2.0",
+    "lodash": "^4.17.5",
     "moment": "^2.22.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
